# AAIE

./: INSTALL.md  README.md  clean_chache.sh  pyproject.toml  requirements.txt
aaie/: __init__.py  api.py  cli.py  main.py
aaie/core/: __init__.py  config.py  orchestrator.py
aaie/graph/: __init__.py  graph_builder.py  graph_serializer.py  models.py
aaie/parsers/: __init__.py  base_parser.py  docker_parser.py  k8s_parser.py  package_parser.py  python_parser.py  terraform_parser.py
aaie/reports/: __init__.py  diagram_generator.py  markdown_generator.py
aaie/rules/: __init__.py  base_rule.py  circular_dependency.py  secret_detector.py  single_point_failure.py
aaie/storage/: __init__.py  database.py  repository_store.py
